[package]
name = "convert_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.4.4"
fastanvil = "0.31.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.15"
tikv-jemallocator = "0.5.4"
flate2 = { version = "1.0.28", default-features = false, features = ["zlib-ng"] }
async-stream = "0.3.5"
futures-util = "0.3.30"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
